--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,4 @@
-name: deploy 
+name: deploy
 on:
   push:
     branches:
@@ -22,15 +22,17 @@ jobs:
       - uses: actions/setup-python@v5
         with:
           python-version: 3.x
-      - run: echo "cache_id=$(date --utc '+%V')" >> $GITHUB_ENV 
+      - run: echo "cache_id=$(date --utc '+%V')" >> $GITHUB_ENV
       - uses: actions/cache@v4
         with:
           key: mkdocs-material-${{ env.cache_id }}
-          path: ~/.cache 
+          path: ~/.cache
           restore-keys: |
             mkdocs-material-
       - run: pip install \
-              mkdocs-material \
-              mkdocs-minify-plugin \
-              mkdocs-git-revision-date-localized-plugin
+          mkdocs-material \
+          mkdocs-minify-plugin \
+          mkdocs-git-revision-date-localized-plugin \
+          git+https://github.com/FrightenedFoxCN/mkdocs-mathenv-plugin
+      - run: sudo apt install -y texlive-xetex dvisvgm
       - run: mkdocs gh-deploy --force
