--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,7 +29,7 @@ jobs:
           path: ~/.cache
           restore-keys: |
             mkdocs-material-
-      - run: pip install \
+      - run: pip install jieba \
           mkdocs-material \
           mkdocs-minify-plugin \
           mkdocs-git-revision-date-localized-plugin \
